--- a/Hw_14_try.csproj
+++ b/Hw_14_try.csproj
@@ -43,11 +43,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogic\BusinessLogic.cs" />
+    <Compile Include="BusinessLogic\ListAsync.cs" />
+    <Compile Include="Starter.cs" />
+    <Compile Include="Config\LoggerConfig.cs" />
+    <Compile Include="Config\IConfig.cs" />
+    <Compile Include="Config\ConfigurationModel.cs" />
+    <Compile Include="Config\Configuration.cs" />
+    <Compile Include="Config\Config.cs" />
+    <Compile Include="Helpers\ThreadSaveLogic.cs" />
+    <Compile Include="Enum\LogLevel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Logger.cs" />
+    <Compile Include="Services\FileService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="config.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
